# group-playlist-bot

./: Cargo.toml
.devcontainer/: devcontainer.json  setup.sh
src/: client.rs  main.rs
