[package]
name = "group-playlist-bot"
version = "0.1.0"
edition = "2021"
default-run = "group-playlist-bot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
teloxide = { version = "0.7", features = ["macros", "auto-send"] }
log = "0.4"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
regex = "*"
lazy_static = "*"
rspotify = { version = "*", features = ["default", "cli", "env-file"] }
futures = "*"